--- a/index.html
+++ b/index.html
@@ -8,28 +8,28 @@
 </head>
 <body>
     <div class="grid-container1">
-        <div class="item">01</div>
-        <div class="item">02</div>
-        <div class="item">03</div>
-        <div class="item">04</div>
-        <div class="item">05</div>
-        <div class="item">06</div>
-        <div class="item">07</div>
-        <div class="item">08</div>
-        <div class="item">09</div>
-        <div class="item">10</div>
-        <div class="item">11</div>
-        <div class="item">12</div>
-        <div class="item">13</div>
-        <div class="item">14</div>
-        <div class="item">15</div>
-        <div class="item">16</div>
+        <div class="item1">01</div>
+        <div class="item1">02</div>
+        <div class="item1">03</div>
+        <div class="item1">04</div>
+        <div class="item1">05</div>
+        <div class="item1">06</div>
+        <div class="item1">07</div>
+        <div class="item1">08</div>
+        <div class="item1">09</div>
+        <div class="item1">10</div>
+        <div class="item1">11</div>
+        <div class="item1">12</div>
+        <div class="item1">13</div>
+        <div class="item1">14</div>
+        <div class="item1">15</div>
+        <div class="item1">16</div>
     </div>
     <div class="grid-container2">
-        <div class="grid-item">01</div>
-        <div class="grid-item">02</div>
-        <div class="grid-item">03</div>
-        <div class="grid-item">04</div>
+        <div class="item2">01</div>
+        <div class="item2">02</div>
+        <div class="item2">03</div>
+        <div class="item2">04</div>
     </div>
 </body>
 </html>
